--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css"
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css\style.css" />
@@ -89,5 +89,89 @@
     </div>
 
     <h5 class="seprator">My Skills</h5>
+
+    <div class="skills">
+      <div class="left">
+        <div class="info">
+          <h3>What My Programming Skills Inlcude</h3>
+          <p>
+            I develop simpe, intuitive, and responsive user interface that helps
+            users get things done with less effort and time.
+          </p>
+        </div>
+        <button class="hire-btn">Hire Me</button>
+      </div>
+
+      <div class="right">
+        <div class="item">
+          <i class="bx bxl-html5"></i>
+        </div>
+        <div class="item">
+          <i class="bx bxl-css3"></i>
+        </div>
+        <div class="item">
+          <i class="bx bxl-typescript"></i>
+        </div>
+        <div class="item">
+          <i class="bx bxl-git"></i>
+        </div>
+        <div class="item">
+          <i class="bx bxl-adobe"></i>
+        </div>
+        <div class="item">
+          <i class="bx bxl-figma"></i>
+        </div>
+        <div class="item">
+          <i class="bx bxl-sass"></i>
+        </div>
+        <div class="item">
+          <i class="bx bxl-tailwind-css"></i>
+        </div>
+        <div class="item">
+          <i class="bx bxl-gitlab"></i>
+        </div>
+        <div class="item">
+          <i class="bx bxl-github"></i>
+        </div>
+        <div class="item">
+          <i class="bx bxl-visual-studio"></i>
+        </div>
+        <div class="item">
+          <i class="bx bxl-react"></i>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <div class="start">
+        <h3>Start a project</h3>
+        <p>
+          Interested in working together? We should queue up a chat, I'll buy
+          the coffee.
+        </p>
+        <button>Let's do this</button>
+      </div>
+      <div class="cols">
+        <div class="about-col">
+          <h3>Connor</h3>
+          <p>Graphic Designer & Programmer</p>
+        </div>
+        <div class="links-col">
+          <h4>Useful Links</h4>
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Skills</a>
+          <a href="#">Portfolio</a>
+          <a href="#">Contact</a>
+        </div>
+        <div class="links-col">
+          <h4>Social Media</h4>
+          <a href="#">Instagram</a>
+          <a href="#">LinkedIn</a>
+          <a href="#">Dribbble</a>
+          <a href="#">Twitter</a>
+          <a href="#">Github</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
