tweaked some styles and replaced placeholder text

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h4>Hi, I'm <span>Connor</span> 👋</h4>
       <p class="title">Graphic Designer & Programmer</p>
       <p class="subtitle">
-        I Design and Code Beautifully Simple Things and I love what I Do!
+        I design and code beautifully simple things — and I love what I do.
       </p>
       <img src="css\images\logo.png" />
     </div>
@@ -68,24 +68,21 @@
     <h5 class="seprator">Who I Am</h5>
 
     <div class="about">
-      <img src="css\images\image.jpeg" alt="" />
       <div class="info">
         <h3>About Me</h3>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam sit
-          eligendi rem ipsa reprehenderit, natus soluta reiciendis, earum
-          dolorum odit voluptate dolorem voluptatibus. Sapiente autem animi
-          accusantium unde perferendis ut. Lorem, ipsum dolor sit amet
-          consectetur adipisicing elit. Quam sit eligendi rem ipsa
-          reprehenderit, natus soluta reiciendis, earum dolorum odit voluptate
-          dolorem voluptatibus. Sapiente autem animi accusantium unde
-          perferendis ut. Lorem, ipsum dolor sit amet consectetur adipisicing
-          elit. Quam sit eligendi rem ipsa reprehenderit, natus soluta
-          reiciendis, earum dolorum odit voluptate dolorem voluptatibus.
-          Sapiente autem animi accusantium unde perferendis ut.
+          Hi, I’m Ian “Connor” Riley, a self-taught graphic designer, motion
+          designer, and aspiring front-end developer. I have over 10 years of
+          experience in graphic design, about 3 years in motion design, and
+          recently started working with HTML and CSS to expand into web
+          development. I’ve been in the professional design space for nearly 3
+          years, following several years of freelance work. At 22, I bring a mix
+          of creativity, curiosity, and hands-on experience to every project,
+          always looking to learn and push my work further.
         </p>
-        <button class="hire-btn">Hire Me</button>
+        <button class="hire-btn">Learn More</button>
       </div>
+      <img src="css\images\image.jpeg" alt="" />
     </div>
 
     <h5 class="seprator">My Skills</h5>
@@ -93,10 +90,16 @@
     <div class="skills">
       <div class="left">
         <div class="info">
-          <h3>What My Programming Skills Inlcude</h3>
+          <h3>What My Skills Inlcude</h3>
           <p>
-            I develop simpe, intuitive, and responsive user interface that helps
-            users get things done with less effort and time.
+            I specialize in a range of creative and technical tools that help
+            bring ideas to life. My main strengths lie in Photoshop and Affinity
+            for graphic design, and After Effects for motion design and
+            animation. I also use Figma for UI/UX design and prototyping, with a
+            growing focus on HTML and CSS to build clean, responsive interfaces.
+            Whether it’s static visuals, motion graphics, or functional web
+            layouts, I enjoy working across disciplines to create polished,
+            engaging work.
           </p>
         </div>
         <button class="hire-btn">Hire Me</button>
@@ -113,25 +116,13 @@
           <i class="bx bxl-typescript"></i>
         </div>
         <div class="item">
-          <i class="bx bxl-git"></i>
-        </div>
-        <div class="item">
           <i class="bx bxl-adobe"></i>
         </div>
         <div class="item">
           <i class="bx bxl-figma"></i>
         </div>
         <div class="item">
-          <i class="bx bxl-sass"></i>
-        </div>
-        <div class="item">
           <i class="bx bxl-tailwind-css"></i>
-        </div>
-        <div class="item">
-          <i class="bx bxl-gitlab"></i>
-        </div>
-        <div class="item">
-          <i class="bx bxl-github"></i>
         </div>
         <div class="item">
           <i class="bx bxl-visual-studio"></i>
@@ -142,14 +133,16 @@
       </div>
     </div>
     <footer>
-      <div class="start">
-        <h3>Start a project</h3>
-        <p>
-          Interested in working together? We should queue up a chat, I'll buy
-          the coffee.
-        </p>
-        <button>Let's do this</button>
-      </div>
+      <!-- <div class="start">
+        <div class="start-text">
+          <h3>Start a project</h3>
+          <p>
+            Interested in working together? Let’s set up a chat — coffee’s on
+            me.
+          </p>
+        </div>
+        <button>Contact Me</button>
+      </div> -->
       <div class="cols">
         <div class="about-col">
           <h3>Connor</h3>
