added a container to have the padding styles and some minor refactoring

--- a/index.html
+++ b/index.html
@@ -11,124 +11,126 @@
     <title>Personal Portfolio</title>
   </head>
   <body>
-    <div class="navbar">
-      <h2>Connor</h2>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Skills</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">About</a></li>
-      </ul>
-      <button class="hire-btn">Hire Me</button>
-    </div>
-
-    <div class="main">
-      <h4>Hi, I'm <span>Connor</span> 👋</h4>
-      <p class="title">Graphic Designer & Programmer</p>
-      <p class="subtitle">
-        I design and code beautifully simple things — and I love what I do.
-      </p>
-      <img src="css\images\logo.png" />
-    </div>
-
-    <div class="guarantee">
-      <div class="item">
-        <div class="icon">
-          <i class="bx bx-pen"></i>
-        </div>
-        <div class="info">
-          <h3>+10</h3>
-          <p>Years Of Design Experience</p>
-        </div>
-        <i class="bx bx-chevron-right"></i>
-      </div>
-      <div class="item">
-        <div class="icon">
-          <i class="bx bx-code"></i>
-        </div>
-        <div class="info">
-          <h3>+1</h3>
-          <p>Year Of Programming Experience</p>
-        </div>
-        <i class="bx bx-chevron-right"></i>
-      </div>
-      <div class="item">
-        <div class="icon">
-          <i class="bx bx-briefcase-alt-2"></i>
-        </div>
-        <div class="info">
-          <h3>+3</h3>
-          <p>Years Of Profesional Experience</p>
-        </div>
-        <i class="bx bx-chevron-right"></i>
-      </div>
-    </div>
-
-    <h5 class="seprator">Who I Am</h5>
-
-    <div class="about">
-      <div class="info">
-        <h3>About Me</h3>
-        <p>
-          Hi, I’m Ian “Connor” Riley, a self-taught graphic designer, motion
-          designer, and aspiring front-end developer. I have over 10 years of
-          experience in graphic design, about 3 years in motion design, and
-          recently started working with HTML and CSS to expand into web
-          development. I’ve been in the professional design space for nearly 3
-          years, following several years of freelance work. At 22, I bring a mix
-          of creativity, curiosity, and hands-on experience to every project,
-          always looking to learn and push my work further.
-        </p>
-        <button class="hire-btn">Learn More</button>
-      </div>
-      <img src="css\images\image.jpeg" alt="" />
-    </div>
-
-    <h5 class="seprator">My Skills</h5>
-
-    <div class="skills">
-      <div class="left">
-        <div class="info">
-          <h3>What My Skills Inlcude</h3>
-          <p>
-            I specialize in a range of creative and technical tools that help
-            bring ideas to life. My main strengths lie in Photoshop and Affinity
-            for graphic design, and After Effects for motion design and
-            animation. I also use Figma for UI/UX design and prototyping, with a
-            growing focus on HTML and CSS to build clean, responsive interfaces.
-            Whether it’s static visuals, motion graphics, or functional web
-            layouts, I enjoy working across disciplines to create polished,
-            engaging work.
-          </p>
-        </div>
+    <div class="container">
+      <div class="navbar">
+        <h2>Connor</h2>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Skills</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">About</a></li>
+        </ul>
         <button class="hire-btn">Hire Me</button>
       </div>
 
-      <div class="right">
+      <div class="main">
+        <h4>Hi, I'm <span>Connor</span> 👋</h4>
+        <p class="title">Graphic Designer & Programmer</p>
+        <p class="subtitle">
+          I design and code beautifully simple things — and I love what I do.
+        </p>
+        <img src="css\images\logo.png" />
+      </div>
+
+      <div class="guarantee">
         <div class="item">
-          <i class="bx bxl-html5"></i>
+          <div class="icon">
+            <i class="bx bx-pen"></i>
+          </div>
+          <div class="info">
+            <h3>+10</h3>
+            <p>Years Of Design Experience</p>
+          </div>
+          <i class="bx bx-chevron-right"></i>
         </div>
         <div class="item">
-          <i class="bx bxl-css3"></i>
+          <div class="icon">
+            <i class="bx bx-code"></i>
+          </div>
+          <div class="info">
+            <h3>+1</h3>
+            <p>Year Of Programming Experience</p>
+          </div>
+          <i class="bx bx-chevron-right"></i>
         </div>
         <div class="item">
-          <i class="bx bxl-typescript"></i>
+          <div class="icon">
+            <i class="bx bx-briefcase-alt-2"></i>
+          </div>
+          <div class="info">
+            <h3>+3</h3>
+            <p>Years Of Profesional Experience</p>
+          </div>
+          <i class="bx bx-chevron-right"></i>
         </div>
-        <div class="item">
-          <i class="bx bxl-adobe"></i>
+      </div>
+
+      <h5 class="seprator">Who I Am</h5>
+
+      <div class="about">
+        <div class="info">
+          <h3>About Me</h3>
+          <p>
+            Hi, I’m Ian “Connor” Riley, a self-taught graphic designer, motion
+            designer, and aspiring front-end developer. I have over 10 years of
+            experience in graphic design, about 3 years in motion design, and
+            recently started working with HTML and CSS to expand into web
+            development. I’ve been in the professional design space for nearly 3
+            years, following several years of freelance work. At 22, I bring a
+            mix of creativity, curiosity, and hands-on experience to every
+            project, always looking to learn and push my work further.
+          </p>
+          <button class="hire-btn">Learn More</button>
         </div>
-        <div class="item">
-          <i class="bx bxl-figma"></i>
+        <img src="css\images\image.jpeg" alt="" />
+      </div>
+
+      <h5 class="seprator">My Skills</h5>
+
+      <div class="skills">
+        <div class="left">
+          <div class="info">
+            <h3>What My Skills Inlcude</h3>
+            <p>
+              I specialize in a range of creative and technical tools that help
+              bring ideas to life. My main strengths lie in Photoshop and
+              Affinity for graphic design, and After Effects for motion design
+              and animation. I also use Figma for UI/UX design and prototyping,
+              with a growing focus on HTML and CSS to build clean, responsive
+              interfaces. Whether it’s static visuals, motion graphics, or
+              functional web layouts, I enjoy working across disciplines to
+              create polished, engaging work.
+            </p>
+          </div>
+          <button class="hire-btn">Hire Me</button>
         </div>
-        <div class="item">
-          <i class="bx bxl-tailwind-css"></i>
-        </div>
-        <div class="item">
-          <i class="bx bxl-visual-studio"></i>
-        </div>
-        <div class="item">
-          <i class="bx bxl-react"></i>
+
+        <div class="right">
+          <div class="item">
+            <i class="bx bxl-html5"></i>
+          </div>
+          <div class="item">
+            <i class="bx bxl-css3"></i>
+          </div>
+          <div class="item">
+            <i class="bx bxl-typescript"></i>
+          </div>
+          <div class="item">
+            <i class="bx bxl-adobe"></i>
+          </div>
+          <div class="item">
+            <i class="bx bxl-figma"></i>
+          </div>
+          <div class="item">
+            <i class="bx bxl-tailwind-css"></i>
+          </div>
+          <div class="item">
+            <i class="bx bxl-visual-studio"></i>
+          </div>
+          <div class="item">
+            <i class="bx bxl-react"></i>
+          </div>
         </div>
       </div>
     </div>
