cleaned up some more responsiveness

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
           <i class="bx bx-chevron-right"></i>
         </div>
       </div>
-
-      <h5 class="seprator">Who I Am</h5>
-
+      <div class="seperator-container">
+        <h5 class="seperator">Who I Am</h5>
+      </div>
       <div class="about">
         <div class="info">
           <h3>About Me</h3>
@@ -81,13 +81,12 @@
             mix of creativity, curiosity, and hands-on experience to every
             project, always looking to learn and push my work further.
           </p>
-          <button class="hire-btn">Learn More</button>
         </div>
         <img src="css\images\image.jpeg" alt="" />
       </div>
-
-      <h5 class="seprator">My Skills</h5>
-
+      <div class="seperator-container">
+        <h5 class="seperator">My Skills</h5>
+      </div>
       <div class="skills">
         <div class="left">
           <div class="info">
@@ -103,7 +102,6 @@
               create polished, engaging work.
             </p>
           </div>
-          <button class="hire-btn">Hire Me</button>
         </div>
 
         <div class="right">
