refactored the footer and made the links work

--- a/index.html
+++ b/index.html
@@ -111,20 +111,25 @@
           <p>Graphic Designer & Programmer</p>
         </div>
         <div class="links-col">
-          <h4>Useful Links</h4>
-          <a href="#">Home</a>
-          <a href="#">About</a>
-          <a href="#">Skills</a>
-          <a href="#">Portfolio</a>
-          <a href="#">Contact</a>
-        </div>
-        <div class="links-col">
-          <h4>Social Media</h4>
-          <a href="#">Instagram</a>
-          <a href="#">LinkedIn</a>
-          <a href="#">Dribbble</a>
-          <a href="#">Twitter</a>
-          <a href="#">Github</a>
+          <a href="https://instagram.com/ian.r4" target="_blank" rel="noopener">
+            <i class="bx bxl-instagram"></i>
+          </a>
+          <a
+            href="https://linkedin.com/in/ian-riley-242a4a300/"
+            target="_blank"
+            rel="noopener"
+          >
+            <i class="bx bxl-linkedin"></i>
+          </a>
+          <a href="https://dribbble.com/aleshyp" target="_blank" rel="noopener">
+            <i class="bx bxl-dribbble"></i>
+          </a>
+          <a href="https://x.com/aleshyp" target="_blank" rel="noopener">
+            <i class="bx bxl-twitter"></i>
+          </a>
+          <a href="https://github.com/aleshyp" target="_blank" rel="noopener">
+            <i class="bx bxl-github"></i>
+          </a>
         </div>
       </div>
     </footer>
