added comments to the project

--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Boxicons library for social icons and other icons -->
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <!-- Main CSS file -->
     <link rel="stylesheet" href="css\style.css" />
     <title>Personal Portfolio</title>
   </head>
   <body>
+    <!-- Page container to apply consistent padding/margin -->
     <div class="container">
+      <!-- Navigation bar with site title and menu links -->
       <div class="navbar">
         <h2>Connor</h2>
         <ul>
@@ -24,15 +28,18 @@
         <button class="hire-btn">Hire Me</button>
       </div>
 
+      <!-- Main hero section with intro text and logo image -->
       <div class="main">
         <h4>Hi, I'm <span>Connor</span> 👋</h4>
         <p class="title">Graphic Designer & Programmer</p>
         <p class="subtitle">
           I design and code beautifully simple things — and I love what I do.
         </p>
+        <!-- Logo image -->
         <img src="css\images\logo.png" />
       </div>
 
+      <!-- Guarantee section highlighting experience and expertise -->
       <div class="guarantee">
         <div class="item">
           <div class="icon">
@@ -65,9 +72,13 @@
           <i class="bx bx-chevron-right"></i>
         </div>
       </div>
+
+      <!-- Section divider -->
       <div class="seperator-container">
         <h5 class="seperator">Who I Am</h5>
       </div>
+
+      <!-- About section with bio information -->
       <div class="about">
         <div class="info">
           <h3>About Me</h3>
@@ -83,9 +94,13 @@
           </p>
         </div>
       </div>
+
+      <!-- Section divider -->
       <div class="seperator-container">
         <h5 class="seperator">My Skills</h5>
       </div>
+
+      <!-- Skills section with description of tools and expertise -->
       <div class="skills">
         <div class="left">
           <div class="info">
@@ -104,12 +119,17 @@
         </div>
       </div>
     </div>
+
+    <!-- Footer with site title and social media links -->
     <footer>
       <div class="cols">
+        <!-- Footer branding/summary -->
         <div class="about-col">
           <h3>Connor</h3>
           <p>Graphic Designer & Programmer</p>
         </div>
+
+        <!-- Social media links -->
         <div class="links-col">
           <a href="https://instagram.com/ian.r4" target="_blank" rel="noopener">
             <i class="bx bxl-instagram"></i>
