--- a/about.html
+++ b/about.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Boxicons library icons -->
+    <!-- Icons -->
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
     <!-- Main CSS file -->
     <link rel="stylesheet" href="css/style.css" />
-    <title>Personal Portfolio</title>
+    <!-- Page title -->
+    <title>About</title>
   </head>
   <body>
-    <!-- Page container to apply consistent padding/margin -->
     <div class="container">
       <!-- Menu toggle input -->
       <input type="checkbox" id="menu-toggle" hidden />
@@ -95,7 +95,6 @@
           <li><a href="#" target="_self">Contact</a></li>
         </ul>
       </nav>
-
       <!-- Main hero section with intro text and logo image -->
       <div class="main">
         <h4>Hi, I'm <span>Connor</span> 👋</h4>
@@ -106,88 +105,7 @@
         <!-- Logo image -->
         <img src="css\images\logo.png" />
       </div>
-
-      <!-- Guarantee section highlighting experience and expertise -->
-      <div class="guarantee">
-        <div class="item">
-          <div class="icon">
-            <i class="bx bx-pen"></i>
-          </div>
-          <div class="info">
-            <h3>+10</h3>
-            <p>Years Of Design Experience</p>
-          </div>
-          <i class="bx bx-chevron-right"></i>
-        </div>
-        <div class="item">
-          <div class="icon">
-            <i class="bx bx-code"></i>
-          </div>
-          <div class="info">
-            <h3>+1</h3>
-            <p>Year Of Programming Experience</p>
-          </div>
-          <i class="bx bx-chevron-right"></i>
-        </div>
-        <div class="item">
-          <div class="icon">
-            <i class="bx bx-briefcase-alt-2"></i>
-          </div>
-          <div class="info">
-            <h3>+3</h3>
-            <p>Years Of Profesional Experience</p>
-          </div>
-          <i class="bx bx-chevron-right"></i>
-        </div>
-      </div>
-
-      <!-- Section divider -->
-      <div class="seperator-container">
-        <h5 class="seperator">Who I Am</h5>
-      </div>
-
-      <!-- About section with bio information -->
-      <div class="about">
-        <div class="info">
-          <h3>About Me</h3>
-          <p>
-            Hi, I’m Ian “Connor” Riley, a self-taught graphic designer, motion
-            designer, and aspiring front-end developer. I have over 10 years of
-            experience in graphic design, about 3 years in motion design, and
-            recently started working with HTML and CSS to expand into web
-            development. I’ve been in the professional design space for nearly 3
-            years, following several years of freelance work. At 22, I bring a
-            mix of creativity, curiosity, and hands-on experience to every
-            project, always looking to learn and push my work further.
-          </p>
-        </div>
-      </div>
-
-      <!-- Section divider -->
-      <div class="seperator-container">
-        <h5 class="seperator">My Skills</h5>
-      </div>
-
-      <!-- Skills section with description of tools and expertise -->
-      <div class="skills">
-        <div class="left">
-          <div class="info">
-            <h3>What My Skills Inlcude</h3>
-            <p>
-              I specialize in a range of creative and technical tools that help
-              bring ideas to life. My main strengths lie in Photoshop and
-              Affinity for graphic design, and After Effects for motion design
-              and animation. I also use Figma for UI/UX design and prototyping,
-              with a growing focus on HTML and CSS to build clean, responsive
-              interfaces. Whether it’s static visuals, motion graphics, or
-              functional web layouts, I enjoy working across disciplines to
-              create polished, engaging work.
-            </p>
-          </div>
-        </div>
-      </div>
     </div>
-
     <!-- Footer with site title and social media links -->
     <footer>
       <div class="cols">
