about page setup and minor css restyle

--- a/about.html
+++ b/about.html
@@ -95,6 +95,7 @@
           <li><a href="#" target="_self">Contact</a></li>
         </ul>
       </nav>
+
       <!-- Main hero section with intro text and logo image -->
       <div class="main">
         <h4>Hi, I'm <span>Connor</span> 👋</h4>
@@ -105,7 +106,41 @@
         <!-- Logo image -->
         <img src="css\images\logo.png" />
       </div>
+
+      <!-- Section divider -->
+      <div class="seperator-container">
+        <h5 class="seperator">Previous Experience</h5>
+      </div>
+
+      <!-- About section with bio information -->
+      <div class="about">
+        <div class="info">
+          <h3>Graphic Design</h3>
+          <p>
+            Hi, I’m Ian “Connor” Riley, a self-taught graphic designer, motion
+            designer, and aspiring front-end developer. I have over 10 years of
+            experience in graphic design, about 3 years in motion design, and
+            recently started working with HTML and CSS to expand into web
+            development. I’ve been in the professional design space for nearly 3
+            years, following several years of freelance work. At 22, I bring a
+            mix of creativity, curiosity, and hands-on experience to every
+            project, always looking to learn and push my work further.
+          </p>
+          <h3>Motion Design</h3>
+          <p>
+            Hi, I’m Ian “Connor” Riley, a self-taught graphic designer, motion
+            designer, and aspiring front-end developer. I have over 10 years of
+            experience in graphic design, about 3 years in motion design, and
+            recently started working with HTML and CSS to expand into web
+            development. I’ve been in the professional design space for nearly 3
+            years, following several years of freelance work. At 22, I bring a
+            mix of creativity, curiosity, and hands-on experience to every
+            project, always looking to learn and push my work further.
+          </p>
+        </div>
+      </div>
     </div>
+
     <!-- Footer with site title and social media links -->
     <footer>
       <div class="cols">
