--- a/about.html
+++ b/about.html
@@ -12,6 +12,29 @@
     <link rel="stylesheet" href="css/style.css" />
     <!-- Page title -->
     <title>About</title>
+
+    <!-- Favicons -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="file:///C:/Users/iancr/Desktop/Exploration/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="file:///C:/Users/iancr/Desktop/Exploration/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="file:///C:/Users/iancr/Desktop/Exploration/favicon-16x16.png"
+    />
+    <link
+      rel="manifest"
+      href="file:///C:/Users/iancr/Desktop/Exploration/site.webmanifest"
+    />
   </head>
   <body>
     <div class="container">
