--- a/index.html
+++ b/index.html
@@ -11,12 +11,36 @@
     <!-- Main CSS file -->
     <link rel="stylesheet" href="css/style.css" />
     <title>Personal Portfolio</title>
+
+    <!-- Favicons -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="file:///C:/Users/iancr/Desktop/Exploration/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="file:///C:/Users/iancr/Desktop/Exploration/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="file:///C:/Users/iancr/Desktop/Exploration/favicon-16x16.png"
+    />
+    <link
+      rel="manifest"
+      href="file:///C:/Users/iancr/Desktop/Exploration/site.webmanifest"
+    />
   </head>
   <body>
     <!-- Page container to apply consistent padding/margin -->
     <div class="container">
       <!-- Menu toggle input -->
       <input type="checkbox" id="menu-toggle" hidden />
+
       <!-- Navigation bar -->
       <div class="navbar">
         <h2>Connor</h2>
